# elca

./: BWLib.hs  ElcaQC.hs  ElcaQCTestL.hs  ElcaUI.hs  LoanCalculator.hs  LoanCalendars.hs  LoanCapitalSplit.hs  LoanCommission.hs  LoanCommissionConf.hs  LoanConfiguration.hs  LoanConfigurationAissa.hs  LoanConfigurationFull.hs  LoanConfigurationType.hs  LoanEarlyPayment.hs  LoanOutput.hs  LoanUserInterface.hs  LoanVarioALZ.hs  Loans.hs  OutputFormat.hs  README.md  Sample.hs  elca.cabal
